--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -271,3 +271,97 @@
    title = {Investments},
    year = {2014}
 }
+@article{Tang2024,
+   abstract = {Reinforcement learning (RL), particularly its combination with deep neural networks referred to as deep RL (DRL), has shown tremendous promise across a wide range of applications, suggesting its potential for enabling the development of sophisticated robotic behaviors. Robotics problems, however, pose fundamental difficulties for the application of RL, stemming from the complexity and cost of interacting with the physical world. This article provides a modern survey of DRL for robotics, with a particular focus on evaluating the real-world successes achieved with DRL in realizing several key robotic competencies. Our analysis aims to identify the key factors underlying those exciting successes, reveal underexplored areas, and provide an overall characterization of the status of DRL in robotics. We highlight several important avenues for future work, emphasizing the need for stable and sample-efficient real-world RL paradigms, holistic approaches for discovering and integrating various competencies to tackle complex long-horizon, open-world tasks, and principled development and evaluation procedures. This survey is designed to offer insights for both RL practitioners and roboticists toward harnessing RL's power to create generally capable real-world robotic systems.},
+   author = {Chen Tang and Ben Abbatematteo and Jiaheng Hu and Rohan Chandra and Roberto Martín-Martín and Peter Stone},
+   doi = {10.1146/annurev-control-030323-022510},
+   issn = {25735144},
+   issue = {1},
+   journal = {Annual Review of Control, Robotics, and Autonomous Systems},
+   keywords = {deep learning,learning for control,real-world applications,reinforcement learning,robotics},
+   month = {8},
+   pages = {153-188},
+   publisher = {Annual Reviews Inc.},
+   title = {Deep Reinforcement Learning for Robotics: A Survey of Real-World Successes},
+   volume = {8},
+   url = {https://arxiv.org/abs/2408.03539v3},
+   year = {2024}
+}
+@article{Shao2019,
+   abstract = {Deep reinforcement learning (DRL) has made great achievements since proposed. Generally, DRL agents receive high-dimensional inputs at each step, and make actions according to deep-neural-network-based policies. This learning mechanism updates the policy to maximize the return with an end-to-end method. In this paper, we survey the progress of DRL methods, including value-based, policy gradient, and model-based algorithms, and compare their main techniques and properties. Besides, DRL plays an important role in game artificial intelligence (AI). We also take a review of the achievements of DRL in various video games, including classical Arcade games, first-person perspective games and multi-agent real-time strategy games, from 2D to 3D, and from single-agent to multi-agent. A large number of video game AIs with DRL have achieved super-human performance, while there are still some challenges in this domain. Therefore, we also discuss some key points when applying DRL methods to this field, including exploration-exploitation, sample efficiency, generalization and transfer, multi-agent learning, imperfect information, and delayed spare rewards, as well as some research directions.},
+   author = {Kun Shao and Zhentao Tang and Yuanheng Zhu and Nannan Li and Dongbin Zhao},
+   keywords = {Index Terms-reinforcement learning,deep learning,deep reinforcement learning,game AI,video games},
+   month = {12},
+   title = {A Survey of Deep Reinforcement Learning in Video Games},
+   url = {https://arxiv.org/abs/1912.10944v2},
+   year = {2019}
+}
+@article{Silver2016,
+   abstract = {The game of Go has long been viewed as the most challenging of classic games for artificial intelligence owing to its enormous search space and the difficulty of evaluating board positions and moves. Here we introduce a new approach to computer Go that uses ‘value networks’ to evaluate board positions and ‘policy networks’ to select moves. These deep neural networks are trained by a novel combination of supervised learning from human expert games, and reinforcement learning from games of self-play. Without any lookahead search, the neural networks play Go at the level of state-of-the-art Monte Carlo tree search programs that simulate thousands of random games of self-play. We also introduce a new search algorithm that combines Monte Carlo simulation with value and policy networks. Using this search algorithm, our program AlphaGo achieved a 99.8% winning rate against other Go programs, and defeated the human European Go champion by 5 games to 0. This is the first time that a computer program has defeated a human professional player in the full-sized game of Go, a feat previously thought to be at least a decade away. A computer Go program based on deep neural networks defeats a human professional player to achieve one of the grand challenges of artificial intelligence. The victory in 1997 of the chess-playing computer Deep Blue in a six-game series against the then world champion Gary Kasparov was seen as a significant milestone in the development of artificial intelligence. An even greater challenge remained — the ancient game of Go. Despite decades of refinement, until recently the strongest computers were still playing Go at the level of human amateurs. Enter AlphaGo. Developed by Google DeepMind, this program uses deep neural networks to mimic expert players, and further improves its performance by learning from games played against itself. AlphaGo has achieved a 99% win rate against the strongest other Go programs, and defeated the reigning European champion Fan Hui 5–0 in a tournament match. This is the first time that a computer program has defeated a human professional player in even games, on a full, 19 x 19 board, in even games with no handicap.},
+   author = {David Silver and Aja Huang and Chris J. Maddison and Arthur Guez and Laurent Sifre and George Van Den Driessche and Julian Schrittwieser and Ioannis Antonoglou and Veda Panneershelvam and Marc Lanctot and Sander Dieleman and Dominik Grewe and John Nham and Nal Kalchbrenner and Ilya Sutskever and Timothy Lillicrap and Madeleine Leach and Koray Kavukcuoglu and Thore Graepel and Demis Hassabis},
+   doi = {10.1038/nature16961},
+   issn = {1476-4687},
+   issue = {7587},
+   journal = {Nature 2016 529:7587},
+   keywords = {Computational science,Computer science,Reward},
+   month = {1},
+   pages = {484-489},
+   pmid = {26819042},
+   publisher = {Nature Publishing Group},
+   title = {Mastering the game of Go with deep neural networks and tree search},
+   volume = {529},
+   url = {https://www.nature.com/articles/nature16961},
+   year = {2016}
+}
+@article{Francois-Lavet2018,
+   abstract = {Deep reinforcement learning is the combination of reinforcement learning (RL) and deep learning. This field of research has been able to solve a wide range of complex decision-making tasks that were previously out of reach for a machine. Thus, deep RL opens up many new applications in domains such as healthcare, robotics, smart grids, finance, and many more. This manuscript provides an introduction to deep reinforcement learning models, algorithms and techniques. Particular focus is on the aspects related to generalization and how deep RL can be used for practical applications. We assume the reader is familiar with basic machine learning concepts.},
+   author = {Vincent François-Lavet and Peter Henderson and Riashat Islam and Marc G. Bellemare and Joelle Pineau},
+   doi = {10.1561/2200000071},
+   issue = {3-4},
+   journal = {Foundations and Trends in Machine Learning},
+   month = {12},
+   pages = {219-354},
+   publisher = {Now Publishers Inc},
+   title = {An Introduction to Deep Reinforcement Learning},
+   volume = {11},
+   url = {http://arxiv.org/abs/1811.12560 http://dx.doi.org/10.1561/2200000071},
+   year = {2018}
+}
+@book{Goodfellow2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
+@misc{IBM2021,
+   author = {IBM},
+   month = {9},
+   title = {What Is Machine Learning (ML)?},
+   url = {https://www.ibm.com/think/topics/machine-learning},
+   year = {2021}
+}
+@article{Bellman1957,
+   author = {Richard Bellman},
+   issue = {5},
+   journal = {Journal of Mathematics and Mechanics},
+   pages = {679-684},
+   title = {A Markovian Decision Process},
+   volume = {6},
+   url = {https://www.jstor.org/stable/24900506},
+   year = {1957}
+}
+
+@book{Bellman1957book,
+   abstract = {This classic book is an introduction to dynamic programming, presented by the scientist who coined the term and developed the theory in its early stages. In Dynamic Programming, Richard E. Bellman introduces his groundbreaking theory and furnishes a new and versatile mathematical tool for the treatment of many complex problems, both within and outside of the discipline. The book is written at a moderate mathematical level, requiring only a basic foundation in mathematics, including calculus. The applications formulated and analyzed in such diverse fields as mathematical economics, logistics, scheduling theory, communication theory, and control processes are as relevant today as they were when Bellman first presented them. A new introduction by Stuart Dreyfus reviews Bellman’s later work on dynamic programming and identifies important research areas that have profited from the application of Bellman’s theory.},
+   author = {Richard Bellman},
+   doi = {10.2307/j.ctv1nxcw0f},
+   isbn = {9781400835386},
+   journal = {Dynamic Programming},
+   month = {1},
+   pages = {1-346},
+   publisher = {Princeton University Press},
+   title = {Dynamic Programming},
+   url = {https://press.princeton.edu/books/ebook/9781400835386/dynamic-programming-pdf},
+   year = {1957}
+}
