--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -148,6 +148,6 @@
 \newacronym{ai}{AI}{\Gls{artificialintelligence}}
 \newacronym{xai}{XAI}{\Gls{explainableai}}
 \newacronym{mpt}{MPT}{\Gls{modernportfoliotheory}}
-\newacronym{dnn}{DNN}{\Gls{deepneuralnetwork}}
+\newacronym{dnn}{DNN}{\Glspl{deepneuralnetwork}}
 \newacronym{mdp}{MDP}{\Gls{markovdecisionprocess}}
 \newacronym{pomdp}{POMDP}{\Gls{partiallyobservablemarkovdecisionprocess}}
