--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -151,3 +151,5 @@
 \newacronym{dnn}{DNN}{\Glspl{deepneuralnetwork}}
 \newacronym{mdp}{MDP}{\Gls{markovdecisionprocess}}
 \newacronym{pomdp}{POMDP}{\Gls{partiallyobservablemarkovdecisionprocess}}
+\newacronym{dqn}{DQN}{Deep Q-Network}
+\newacronym{a3c}{A3C}{Asynchronous Advantage Actor-Critic}
